Fix z-index on menu

--- a/app/assets/stylesheets/uploadcare/blocks/menu/menu_opened.pcss
+++ b/app/assets/stylesheets/uploadcare/blocks/menu/menu_opened.pcss
@@ -1,7 +1,7 @@
 .menu_opened {
   @media (--mobile) {
     position: absolute;
-    z-index: 50;
+    z-index: 1000;
 
     height: 100%;
 
